# jb_deep

./: CMakeLists.txt  README.md  mnist.cc
src/: op.h  session.h  tensor.cc  tensor.h
test/: test.h  test_op.cc  test_tensor.cc
